# proxy

./: .gitignore  Cargo.toml  README.md  config.toml  test.toml
base/: clash_default.yml
base/rules/: ChinaDomain.list  ChinaIp.list  ProxyGFWlist.list
docs/: architecture.md
docs/output-formats/: clash-general.md  clash-transport.md  clash.md  index.md  sing-box.md
docs/protocols/: index.md  shadowsocks.md  sip022-aead-2022.md  snell.md  ssr.md  trojan.md  tuic.md  vless.md  vmess.md
docs/ref/: anytls-uri-scheme.md  clash-common-fields.md  clash-proxy-types.md  clash-transport.md  hysteria1-uri-scheme.md  hysteria2-uri-scheme.md  quantumultx-node-format.md  shadowsocksr-qrcode-scheme.md  sip002-uri-scheme.md  sip008-online-config.md  surfboard-proxy-format.md  trojan-url-scheme.md  tuic-proxy-type.md  vless-share-link.md  vmess-share-link.md
src/: airport.rs  alive.rs  builder.rs  cache.rs  config.rs  convert.rs  crawl.rs  deduce.rs  error.rs  geoip.rs  lib.rs  mailtm.rs  main.rs  parser.rs  preprocess.rs  proxy.rs  proxy_log.rs  renewal.rs  ruleset.rs  storage.rs  subscribe.rs  userinfo.rs  validate.rs  workflow.rs
src/crawl/: cache.rs  client.rs  depth.rs  discord.rs  extract.rs  extractor.rs  github.rs  google.rs  mod.rs  pages.rs  pipeline.rs  proxy_api.rs  proxy_site.rs  reddit.rs  rss.rs  telegram.rs  twitter.rs  validate.rs  yandex.rs
tests/: parse_format_test.rs  pipeline_integration_test.rs
