[package]
name = "proxy-collector"
version = "0.1.0"
edition = "2024"
description = "代理采集工具 - 多源爬取、验证、转换和推送代理节点"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "socks", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# URL/Encoding
url = "2"
percent-encoding = "2"

# Crypto/hashing
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Utils
regex = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "proxy-collector"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
